--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "babel-loader": "^8.0.6",
+    "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -30,7 +35,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "eslintConfig": {
-    "extends":"airbnb-base"
+    "extends": "airbnb-base"
   },
   "browseslist": {
     "development": [
