--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "workbox-webpack-plugin": "^5.0.0"
   },
   "eslintConfig": {
     "extends": "airbnb-base"
